--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/passport-http-bearer": "^1.0.35",
     "@types/passport-local": "^1.0.33",
     "@types/react": "^16.9.34",
+    "@types/react-bootstrap": "^1.0.0",
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-stripe-elements": "^6.0.4",
